--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,8 @@
-.grid{
-    border: 1px solid black;
-    height: 25px;
-    width: 25px;
+* {
+    box-sizing: border-box;
 }
-
 
 #container {
 display: flex;
 flex-wrap: wrap;
-}
-
-#container>div:nth-child(16n + 1) {
-    width: 100%;
-    border: 0;
-    height: 0;
 }
