--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,8 @@
 
 #container {
     display: grid;
-    
+    grid-template-columns: repeat(16,auto);
+    grid-template-rows: repeat(16,auto);
     min-height: 750px;
     min-width: 750px;
     max-height: 750px;
